<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:contentDescription="@string/logo"
    tools:context=".Activities.MainActivity">

    <Space
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:text="@string/aviation"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/darke"
            android:textSize="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:text="@string/solution"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/darke"
            android:textSize="48dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/archivo_black"
            android:text="@string/gsa"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/darke"
            android:textSize="48dp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            app:cornerRadius="32dp"
            app:fButtonColor="@color/orange"
            app:shadowColor="@color/orange"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/signup"
            app:cornerRadius="32dp"
            app:fButtonColor="@color/sky_blue"
            app:shadowColor="@color/sky_blue"
            app:shadowEnabled="true"
            app:shadowHeight="5dp" />
    </LinearLayout>

</LinearLayout>